--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -222,13 +222,12 @@ Comparing forests, upper canopies of temperate deciduous species can have greate
 
 **Leaf thermoregulation is controlled by leaf traits, that are in-turn adapted to their environment [@michaletzEnergeticCarbonEconomic2016]. Therefore, are critical in maintaining desirable $T_{leaf}$ and shaping leaf metabolism (following section) across forest vertical strata (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`)[@michaletzPlantThermoregulationEnergetics2015; @zwienieckiHydraulicLimitationsImposed2004]**
 
-Leaf morphology adapts to the local microenvironment during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004] where degrees of direct to diffused light and resultant water demands shape sun vs. shade leaves, and their vascular architecture [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. This dichotomy in leaves is observed along the vertical gradient where canopy-leaves vary dramatically from canopy-interior and understory due to the differences in biophysical conditions (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). 
-But at greater tree height, biological--tree-height--and biophysical--light, temperature, and evaporative demand (Fig. `r fig_NEON_vertical`)--also play a role in shaping leaf traits 
+Leaf morphology adapts to the local microenvironment during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004] where degrees of direct to diffused light and resultant water demands shape sun vs. shade leaves, and their vascular architecture [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. This dichotomy in leaves is observed along the vertical gradient where canopy-leaves vary dramatically from canopy-interior and understory due to the differences in biophysical conditions (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). At greater tree height, biological--tree-height--and biophysical--light, temperature, and evaporative demand (Fig. `r fig_NEON_vertical`)--also play a role in shaping leaf traits 
 
 In particular, hydraulic constraints increase with height on a tree [REFS; *McDowell-isotopes book chapter*; @cobleLightAcclimationOptimizes2015; *Couvreur et al., 2018*] such that gas exchange is strongly constrained by at the tops of(~100 m. tall *Sequoia sempervirens*; *Ambrose et al. 2009, 2010*).
-Isolating height (>35m) under constant light show that, canopy $gs$ decreases with increasing $VPD$  [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Morphologically, leaf size [Kaare H. Jensen and Maciej A. Zwieniecki, 2013] and lobation [@kusiPlasticLeafMorphology2020] have shown to decrease, while leaf mass per area (at greater than 20m) to increase  [@cobleLightAcclimationOptimizes2015; @kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a; @chinLeafAcclimationLight2017]. 
+Isolating height (>35m) from light shows that, canopy $gs$ decreases with increasing $VPD$  [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Morphologically, leaf size [Kaare H. Jensen and Maciej A. Zwieniecki, 2013] and lobation [@kusiPlasticLeafMorphology2020] have shown to decrease, while leaf mass per area (at greater than 20m) to increase  [@cobleLightAcclimationOptimizes2015; @kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a; @chinLeafAcclimationLight2017]. 
 
-Disentangling tree-height related biological and biophysical drivers (Fig. `r fig_NEON_vertical`) of leaf traits remains an important area for research, which is sparse, but is beyond the scope of the current review. Here, our primary interest is in how leaf traits and function vary across the vertical gradient from the canopy-top to the understory in forests. We note that patterns across light and height gradients are generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
+Disentangling tree-height related biological and biophysical drivers (Fig. `r fig_NEON_vertical`) of leaf traits remains an important area for research, which is sparse, is beyond the scope of the current review. Here, our primary interest is in how leaf traits and function vary across the vertical gradient from the canopy-top to the understory in forests. We note that patterns across light and height gradients are generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
 
 ### *(clarify intra- vs inter-specific variation - 1 short paragraph)*
 
@@ -239,7 +238,7 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 ### Intraspecific variation
 
-Within-canopy gradients of individuals, leaf traits vary--going from buffered [shaded] to exposed canopy positions [@casasSunShadeLeaves2011]-- at a leaf anatomical, structural and biochemical level [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. These trait-patterns contribute to [understanding] vertical $T_{leaf}$ dynamics [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] where Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity. Further, there is a need for research to characterize trait relationships and responses through the vertical canopy, because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
+Within-canopy gradients of individuals, leaf traits vary--going from buffered [shaded] to exposed canopy positions [@casasSunShadeLeaves2011]-- at a leaf anatomical, structural and biochemical level [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020] that contribute to [understanding] vertical $T_{leaf}$ dynamics [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016]. Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity. Further, there is a need for research to characterize trait relationships and responses through the vertical canopy, because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
 
 ![Table `r table_leaf_traits`. (*For latest version of table, see tables.pdf.*)](table1.png)
 
