--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -110,7 +110,7 @@ In the meantime, our findings imply that while large canopy trees are the most v
 
 **Forest responses and feedbacks to climate change will have a critical influence on the future of Earth's climate.**
 Globally, temperatures have risen # $^\circ$C since YEAR and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC 2021), accompanied by increasing severity and frequency of heat waves [@perkinsIncreasingFrequencyIntensity2012] and hotter droughts [*Trenberth et al. 2014*].
-These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities 2021], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities]. Leading to, individually or in combination, can reduce forest C sequestration, as may already be occurring in some forests [REFS; @sullivanLongtermThermalSensitivity2020].The resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016, Bonan 2008], yet this influence remains extremely uncertain [REFS].
+These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities 2021], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities]. Leading to, individually or in combination, reduced forest C sequestration, as may already be occurring in some forests [REFS; @sullivanLongtermThermalSensitivity2020].The resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016, Bonan 2008], yet this influence remains extremely uncertain [REFS].
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. 
@@ -157,7 +157,7 @@ In this review, we focus primarily on growing season conditions, including leaf 
 ### Light environments
 
 **Light conditions, specifically changes in the proportion of incident light and photosynthetically active radiation (PAR), vary along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`; @koike_leaf_2001].** 
-Generally, along the vertical gradient of forests globally, amount of light decreases from canopy tops to the forest floor which is mediated by foliage LAI and density. This gradient is most pronounced under broad-leaf and mixed forests where light reaching forest floors, incident to the canopy-top range from ~1-2% to 4-5%, respectively [Fig. `r fig_NEON_vertical`; @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006] compared to needle-leaf forest floors that receive ~17-34% [@baldocchiSeasonalVariationEnergy1997]. Sunflecks, are another axis of light for shaded forest regions, caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. In heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995). 
+Generally, along the vertical gradient of forests globally, amount of light decreases from canopy tops to the forest floor which is mediated by foliage LAI and density. This gradient is most pronounced under broad-leaf and mixed forests where light reaching forest floors, incident to canopy-tops range from ~1-2% to 4-5%, respectively [Fig. `r fig_NEON_vertical`; @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006] compared to needle-leaf forest floors that receive ~17-34% [@baldocchiSeasonalVariationEnergy1997]. Sunflecks, offer another light source for shaded forest regions, caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. In heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995). 
 
 ### Wind speeds 
 **Wind speeds are also higher at the top of the canopy (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`), owing to... [@juckerCanopyStructureTopography2018].**
@@ -165,11 +165,9 @@ Across all **#** forested NEON sites, and in closed-canopy forests [@barnardSeas
 
 ### Air temperature 
 **Air temperature, $T_{air}$, often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`).**
-Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
+The $T_{air}$ difference between understory and canopy temperature vary based on multiple factors such as radiation, local topography, vertical air mixing and cloud cover [*Defrenne et al. 2021*].Dense canopies buffer understories from maximum $T_{air}$ relatively more than open canopies, where dense canopy understories can have cooler maximum temperature during the day, and warmer minimum temperature during the night, than open canopy understories, nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009;  @martin_boundary_1999] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. (*This sentence is too complex-- hard to understand*)
 
-The strength of this buffering is greater under dense than open canopies; with daytime cooler lower maximum  temperature, and nighttime warmer higher minimum in the understory, relatively more than open-forests, nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009;  @martin_boundary_1999] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. (*This sentence is too complex-- hard to understand*)
-
-Seasonally, buffering capacity increases with water availability [@davisMicroclimaticBufferingForests2019] and is greater in wet than dry seasons [@rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018, Tymen et al. 2017; @mcgregor_tree_nodate]. In colder conditions, dense-canopies maintain warmer higher minimum temperatures [$T_{min}$] in the understory relative to open-canopy forests and nearby clearings where greater radiative heat loss results in lower $T_{min}$ [@zellweger_seasonal_2019; *Defrenne et al. 2021*; @nakamuraForestsTheirCanopies2017].
+Seasonally, canopy buffering capacity is greater in wet than dry seasons [@davisMicroclimaticBufferingForests2019; @rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018, Tymen et al. 2017; @mcgregor_tree_nodate]whereas in colder conditions, dense-canopy understories experience higher minimum temperatures [$T_{min}$] relative to open-canopy understories and nearby clearings where greater radiative heat loss results in lower $T_{min}$ [@zellweger_seasonal_2019; *Defrenne et al. 2021*; @nakamuraForestsTheirCanopies2017].
 
 ### Humidity and evaporative demand
 **Humidity also varies across the forest vertical profile, and is generally higher in the understory (Fig. `r fig_NEON_vertical`).**[@mcgregor_tree_nodate]
